--- a/epiqbooks-frontend/package.json
+++ b/epiqbooks-frontend/package.json
@@ -15,7 +15,8 @@
     "@types/react-router-dom": "^5.3.3",
     "react-router-dom": "^5.3.4",
     "bootstrap": "^5.2.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typescript": "4.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
