--- a/epiqbooks-backend/src/main/resources/application.properties
+++ b/epiqbooks-backend/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.data.rest.base-path=/api
+okta.oauth2.client-id=0oa7l3b92w8TPhBET5d7
+okta.oauth2.issuer=https://dev-08712788.okta.com/oauth2/default
