--- a/epiqbooks-frontend/package.json
+++ b/epiqbooks-frontend/package.json
@@ -9,27 +9,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.3",
+    "react": "^18.2.0",
     "react-router-dom": "^5.3.4",
-    "typescript": "4.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+    "eject": "react-scripts eject",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
+  }
+,
   "browserslist": {
     "production": [
       ">0.2%",
@@ -43,6 +39,12 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.4"
+    "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "@types/node": "^18.11.18",
+    "prettier": "^2.8.1",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   }
 }
