--- a/epiqbooks-frontend/package.json
+++ b/epiqbooks-frontend/package.json
@@ -12,7 +12,9 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.13",
     "bootstrap": "^5.2.3",
+    "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "web-vitals": "^2.1.4"
@@ -20,12 +22,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:css": "postcss src/tailwind.css -o src/tailwind.output.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
-  }
-,
+  },
   "browserslist": {
     "production": [
       ">0.2%",
