--- a/epiqbooks-backend/pom.xml
+++ b/epiqbooks-backend/pom.xml
@@ -52,6 +52,27 @@
             <artifactId>okta-spring-boot-starter</artifactId>
             <version>2.1.6</version>
         </dependency>
+
+       
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
