fixed bookservice history error

--- a/epiqbooks-backend/src/main/resources/application.properties
+++ b/epiqbooks-backend/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql=true
 spring.data.rest.base-path=/api
 okta.oauth2.client-id=0oa7l3b92w8TPhBET5d7
 okta.oauth2.issuer=https://dev-08712788.okta.com/oauth2/default
+app.jwt.secret=7dPGeZ38u2rFjsNkMzrtbHnpJxQc8WtM
+app.jwt.expiration=86400000
